2/2.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-finder
          image: jylhakos/todo-finder
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: todo-response
          image: jylhakos/todo-response
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: todo-backend
          image: jylhakos/todo-backend
