2/2.02/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: todos-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3002
