2/2.02/manifests/service-finder.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-finder-svc
spec:
  type: NodePort
  selector:
    app: todos
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3001
