2/2.02/manifests/service-response.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-response-svc
spec:
  type: ClusterIP
  selector:
    app: todos
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
